CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-02 23:51:08
+lastsearch = 2024-08-03 00:26:59
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 [books.google.com]
 match = -212.5%%
 title = Đại doàn kết - Issues 9-29 - Page 20 - Google Books Result
-url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS3PVPmr8&sig=ACfU3U3Se5MoQOk9Xo33dIdds7HMS6Kr7A&hl=en&sa=X&ved=2ahUKEwiD3Pe5ztaHAxX4SjABHWnTFhUQ6AF6BAgiEAM
+url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS3PVWrkf&sig=ACfU3U3hhnzl2Eau_tccwHg9LLA_xbQArw&hl=en&sa=X&ved=2ahUKEwi-so6U6taHAxXHkYkEHQ8yKs8Q6AF6BAgtEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
