--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-02 23:50:07
+lastsearch = 2024-08-03 00:15:39
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -92,9 +92,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [muathongminh.vn]
-match = -95.5%%
-title = Lịch sử giá Thảm trải giường Happiness có sẵn size 1m6x2m ...
-url = https://muathongminh.vn/tham-trai-giuong-happiness-co-san-size-1m6x2m-va-1m8x2m-p.1__5605883644__16397825
+match = -131.8%%
+title = Tấm thảm chống thấm cotton muji cho bé, miếng lót giường nôi ...
+url = https://muathongminh.vn/tam-tham-chong-tham-cotton-muji-cho-be-mieng-lot-giuong-noi-cui-xe-day-babyaz-p.1__10634492528__515565015
 
 [filskovfriskole.skoleporten.dk]
 match = -18.2%%
