--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-02 23:49:25
+lastsearch = 2024-08-03 00:19:46
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Tăm H&T Hương Trúc - Kích thước 120x190 ; 150x190
-url = https://shopee.vn/Chiếu-Tăm-H-T-Hương-Trúc-Kích-thước-120x190-150x190-160x200-180x200-200x220-i.752854860.22042172270
+match = 0.0%%
+title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
+url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
 
 [www.diepxuan.com]
-match = -20.0%%
-title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+match = -14.3%%
+title = HT - Điệp Xuân
+url = https://www.diepxuan.com/ht.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -47,9 +47,9 @@ title = Chiếu trúc thanh Hương Trúc 100 x 190cm
 url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-100-190.html
 
 [www.facebook.com]
-match = -75.0%%
-title = Đệm 24h Thái Bình - Chăn Ga Gối Đệm's post
-url = https://www.facebook.com/story.php/?story_fbid=716670557148181&id=100064157288007
+match = 31.6%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [muasamcong.mpi.gov.vn:8082]
 match = -25.0%%
