--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-02 17:39:48
+lastsearch = 2024-08-03 00:13:35
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -61.9%%
-title = Daily Vlog: 12 tiếng du lịch bụi ở Vũng Tàu…
-url = https://www.youtube.com/watch?v=d8mZRVKGnIo
+match = -114.3%%
+title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
+url = https://www.youtube.com/watch?v=St3S4ilkoIY
 
 [liontrip.vn]
 match = -81.0%%
@@ -347,9 +347,9 @@ title = Khu du lịch cáp treo - Hồ Mây Vũng Tàu.
 url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt/extAssetPublisher/content/333393/khu-du-lich-cap-treo-ho-may-vung-tau
 
 [www.klook.com]
-match = -85.7%%
-title = Vũng Tàu Có Gì Chơi? Cẩm Nang Du Lịch Vũng Tàu Trọn Bộ
-url = https://www.klook.com/vi/blog/vung-tau-co-gi-choi/
+match = -61.9%%
+title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
+url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
 
 [www.traveloka.com]
 match = -114.3%%
