--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-02 22:27:18
+lastsearch = 2024-08-03 00:25:37
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -19,11 +19,11 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoqXllUxsqLAx9astni-kHgR5xrq_OQ3MdFwDM9828ROg3mOPQ_F
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOorSFz61rnrNi9dfy0a_0UX3B8eQGM1AwlpPA_Aqw90DfJrzBPAl
 
 [www.changagoidemeveron.vn]
-match = -135.0%%
-title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc chính ...
+match = -105.0%%
+title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc ...
 url = http://www.changagoidemeveron.vn/3/everon/dem-bong-ep-everon.html
 
 [akasi.com.vn]
@@ -42,8 +42,8 @@ title = Nệm Everon
 url = https://www.diepxuan.com/everon/nem-everon.html
 
 [everon.online]
-match = -60.0%%
-title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép, Áo ...
+match = -90.0%%
+title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép Everon, Áo ...
 url = https://everon.online/blogs/news/bang-gia-ban-vo-boc-dem-bong-ep-everon
 
 [nemgiakho.com]
@@ -54,7 +54,7 @@ url = https://nemgiakho.com/cua-hang-nem-everon-180x200x10-gia-re-chinh-hang.htm
 [www.lazada.vn]
 match = -90.0%%
 title = [Trả góp 0%%] Nệm bông ép gấp 3 Everon Ceramic ...
-url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOorIuMlE9EgvFa-yvD87PTb6ZAyYBE5-brUEbrhp-nfRTA40uohh
+url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOoq_19BuAitVCWYbogcEbqTeG2gB1T9OYyrnWc7uHgZR8AeFX-hF
 
 [nemeveron.com.vn]
 match = -165.0%%
