--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-02 21:58:39
+lastsearch = 2024-08-03 00:21:32
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
 match = -209.1%%
@@ -42,9 +42,9 @@ title = Bọc Ghế Da Cao Cấp - KTF Auto Đà Lạt
 url = https://ktfauto.vn/product/boc-ghe-da-cao-cap/
 
 [redcar.com.vn]
-match = -290.9%%
-title = Bọc ghế da ô tô Toyota Camry (da Thái) - RedCar.com
-url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-toyota-camry-da-thai/
+match = -254.5%%
+title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
+url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
 match = -181.8%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = -318.2%%
-title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
-url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
+match = 18.2%%
+title = Bọc ghế da ô tô
+url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
 
 [github.com]
 match = -81.8%%
@@ -195,4 +195,9 @@ url = https://ghedaviet.com/ban-ghe-da-tu-nhien-gdtn-48
 match = -154.5%%
 title = Ghế công thái học – Epione Viet Nam
 url = https://epione.vn/collections/ghe-cong-thai-hoc
+
+[xetaihanoi.edu.vn]
+match = -227.3%%
+title = Bọc Ghế Da Ô Tô Giá Rẻ TPHCM - XE TẢI HÀ NỘI
+url = https://xetaihanoi.edu.vn/boc-ghe-da-o-to-gia-re-tphcm/
 
