--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -33.3%%
-title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
-url = https://songhong.info/chan-ga-goi-bc22
+match = -16.7%%
+title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
+url = https://songhong.info/chan-ga-goi-bc67
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
-url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
+match = 12.5%%
+title = Everon 2022 - Bộ chăn ga gối
+url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -79,7 +79,7 @@ url = https://everonletrongtan.com/bo-suu-tap-everon-2022
 [jysk.vn]
 match = 0.0%%
 title = Phụ kiện chăn ga gối - JYSK.vn
-url = https://jysk.vn/phu-kien-chan-ga-goi?srsltid=AfmBOoosg8VZGSe2mCKsdrWqdb1Sv4JOYs2qrhpenQM8CENP-5My7hmh
+url = https://jysk.vn/phu-kien-chan-ga-goi
 
 [www.facebook.com]
 match = 15.8%%
