--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-02 21:49:36
+lastsearch = 2024-08-03 00:37:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ ga chun poly
+match = -46.4%%
+title = [SP mới] Bộ ga gối poly cotton ga kí túc xá kích thước ...
+url = https://shopee.vn/-SP-mới-Bộ-ga-gối-poly-cotton-ga-kí-túc-xá-kích-thước-80x190cm-drap-nệm-ga-giường-đơn-ga-chun-trải-giường-i.483546614.20369429874
 
 [chandem.com.vn]
 match = 17.9%%
