--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-02 23:43:54
+lastsearch = 2024-08-03 00:35:06
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -19,7 +19,7 @@ url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 [mych.vn]
 match = -60.7%%
 title = Khay Đá 14 Ô Làm Đá Viên, Rau Câu, Trữ Đồ Ăn Dặm ... - Mych
-url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html?srsltid=AfmBOoq_3o-kSvOpUo-IoyYsbDoKqJB1n0Y3kpdLp-eV4asIvLldM8Mu
+url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html
 
 [xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn]
 match = -60.7%%
@@ -108,8 +108,8 @@ url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-tho
 
 [www.facebook.com]
 match = -25.0%%
-title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
-url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
+title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
+url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
