--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-02 20:29:28
+lastsearch = 2024-08-03 00:31:35
 
 [shadow.vn]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Đèn pin FENIX HT18 Hunting (1500 Lumens)
 url = https://bisu.vn/den-pin-fenix-ht18-hunting-1500-lumens-p18720670.html
 
 [www.youtube.com]
-match = -220.0%%
-title = Review 2 cây đèn pin chiếu xa chủ lực của Fenix: HT18R & ...
-url = https://www.youtube.com/watch?v=fR769s_r1hk
+match = -213.3%%
+title = Camera ảnh nhiệt cầm tay HTI HT-18, kiểm tra chi tiết máy ...
+url = https://www.youtube.com/watch?v=_7NF5yRx61c
 
 [vnqtech.com]
 match = -200.0%%
