--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-02 23:46:20
+lastsearch = 2024-08-03 00:28:33
 
 [hoa18.com]
-match = -50.0%%
-title = Về Hoa18
-url = https://hoa18.com/thong-tin/ve-hoa-18
+match = -84.2%%
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
 match = -126.3%%
