--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-02 23:51:25
+lastsearch = 2024-08-03 00:43:53
 
 [shopee.vn]
 match = -33.3%%
@@ -97,8 +97,8 @@ title = Chiếu Mây Điều Hòa cao cấp
 url = https://nemsaithanh.com/chieu-truc-cac-loai/chieu-may-dieu-hoa-cao-cap/
 
 [fptshop.com.vn]
-match = -29.6%%
-title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
+match = 0.0%%
+title = 
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [voicon.net]
