--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-02 19:58:01
+lastsearch = 2024-08-03 00:44:13
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -16.7%%
-title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
-url = https://www.youtube.com/watch?v=HfaucbE1OKk
+match = -66.7%%
+title = 🔴 Trực tiếp: TRUNG QUỐC - VIỆT NAM | Giải bóng đá U19 ...
+url = https://www.youtube.com/watch?v=3U6gbHFBMhs
 
 [www.chotot.com]
 match = -54.2%%
@@ -295,4 +295,9 @@ url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2023/12/thong-cao-bao-c
 match = -41.7%%
 title = CÔNG TY VÀNG BẠC ĐÁ QUÝ KIM LONG ĐỒNG THÁP
 url = https://www.kimlongdongthap.vn/
+
+[www.google.com]
+match = -45.8%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
