--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-02 22:31:19
+lastsearch = 2024-08-03 00:39:48
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOoovpvIyXc3LV3keqQcQ2wjiTYlfNdppPHs_5KUzz8O-JnELtyUh
 
 [demre.com.vn]
-match = 70.4%%
-title = chiếu trúc hạt đen-trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-3
+match = 66.7%%
+title = chiếu trúc hạt đen- trắng 160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -44,12 +44,12 @@ url = https://thegioidemviet.vn/chieu-truc/
 [www.diepxuan.com]
 match = 63.0%%
 title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOorzanL6irgQYHyo11AQIGANUAwlVe8AckIBqObNRMGxe3De52ZY
 
 [shopee.vn]
 match = -18.5%%
 title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/universal-link/-Mã-SKAMLSC0206-giảm-10-tối-đa-70K-đơn-100K-Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
