--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-02 23:57:19
+lastsearch = 2024-08-03 00:45:24
 
 [demxanh.com]
-match = 28.0%%
-title = Chăn ga gối Singapore lụa
-url = https://demxanh.com/chan-ga-goi-singapore-lua.html
+match = -6.9%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = -6.9%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = -20.7%%
-title = bộ chăn ga pyeoda giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
+match = -27.6%%
+title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
+url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
 match = 34.5%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopK4HibR3Zft_C9vHq8vvSI02baWCYOImN9BfKugCUdjvMuwLm1
 
 [www.facebook.com]
-match = 20.7%%
-title = Chăn Ga Gối Đệm Singapore | Hanoi
-url = https://www.facebook.com/changagoisingapore/?locale=nn_NO
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
 
 [changagoidemdep.vn]
 match = 3.4%%
