--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 00:26:59
+lastsearch = 2024-08-03 00:52:13
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC1
 url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 
 [books.google.com]
-match = -212.5%%
-title = Đại doàn kết - Issues 9-29 - Page 20 - Google Books Result
-url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS3PVWrkf&sig=ACfU3U3hhnzl2Eau_tccwHg9LLA_xbQArw&hl=en&sa=X&ved=2ahUKEwi-so6U6taHAxXHkYkEHQ8yKs8Q6AF6BAgtEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fiz6uw1&sig=ACfU3U17si6ihMLRgVKeRkTMXUHPzf7_aw&hl=en&sa=X&ved=2ahUKEwjI4IDm79aHAxWQHjQIHT9TBQoQ6AF6BAgcEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
