--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-02 16:55:56
+lastsearch = 2024-08-03 00:47:50
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html?srsltid=AfmBOooegDCYbnerMhEUN4_c2Kzwe49RosVb9hSFUkDm2dRiHe6JYy5B
 
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOoq7SwVykNG1_sc0lp3ORagXoetOdyjMT5r2bONh2om2OgH5Mnyb
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -24,7 +24,7 @@ url = https://mgaleg.maryland.gov/mgawebsite/Committees/Media/false?cmte=b&t&ys=
 [vuanem.com]
 match = -57.1%%
 title = Top 8 cửa hàng bán chăn ga gối nệm Quận 1 chất lượng ...
-url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html
+url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html?srsltid=AfmBOoqCGosMWvwwp0reCT5JDp19qVRwXQ8IQ5FwC_Kk_fiBXAH19K6_
 
 [demxinh.vn]
 match = -67.9%%
@@ -112,9 +112,9 @@ title = Batavus greenparks kettingkast [V7seXc]
 url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=51918&url=https://xn--80abg0cjq.xn--p1ai/5368124sdzhrozytomskrufe5fe43y
 
 [archive.org]
-match = 7.1%%
-title = Video help, tips, and techniques
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn-----6kcbaefdcuda3ajhb7addn3airdibd2ak4bf8a59a.xn--p1ai/ABCr79tfe8fe43z
+match = -7.1%%
+title = Schumann frequenz live stream [tKao2f]
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80afptqn.xn--p1ai/8723491wwwhuoyanbaocomze5fe43y
 
 [www.semex.com]
 match = -32.1%%
@@ -245,4 +245,9 @@ url = http://www.e-yearbook.com/yearbooks/United_States_Naval_Academy_Lucky_Bag_
 match = -46.4%%
 title = Gelatissimo Artisan Gelato - New Canaan Restaurants
 url = https://en.tripadvisor.com.hk/Restaurant_Review-g33848-d3180807-Reviews-Gelatissimo_Artisan_Gelato-New_Canaan_Connecticut.html
+
+[picclick.co.uk]
+match = -25.0%%
+title = Blankets, Bedding, Home, Furniture & DIY
+url = https://picclick.co.uk/Home-Furniture-DIY/Bedding/Blankets/
 
