--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -64.7%%
+title = How I gutted my HOA : r/pettyrevenge
+url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
 match = -217.6%%
