--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-03 00:25:37
+lastsearch = 2024-08-03 00:56:03
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -19,7 +19,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOorSFz61rnrNi9dfy0a_0UX3B8eQGM1AwlpPA_Aqw90DfJrzBPAl
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoo0sE3VA-2nBIMDaKZlyopIx_cLi4tYZdInqnLbpRYqagNO4e7i
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -54,7 +54,7 @@ url = https://nemgiakho.com/cua-hang-nem-everon-180x200x10-gia-re-chinh-hang.htm
 [www.lazada.vn]
 match = -90.0%%
 title = [Trả góp 0%%] Nệm bông ép gấp 3 Everon Ceramic ...
-url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOoq_19BuAitVCWYbogcEbqTeG2gB1T9OYyrnWc7uHgZR8AeFX-hF
+url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOoqNwo4XjCfOxsZD28ODvgeUiGBnVWII9vTmxrhsiRiBeyPGy1R5
 
 [nemeveron.com.vn]
 match = -165.0%%
@@ -99,7 +99,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [everon.com.vn]
 match = -90.0%%
 title = 180 X 200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/180-x-200/
+url = https://everon.com.vn/kich-co/180-x-200/?srsltid=AfmBOoodoD3ruaX506fPZInhU7Pq3_TGHpbx3Zxc1Nk_vvfBAjPjxUkK
 
 [everonhanquoc.vn]
 match = -95.0%%
