--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-03 00:26:19
+lastsearch = 2024-08-03 00:55:44
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
 title = Bộ thảm ghế gỗ 1 dài 2 ngắn
-url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
+url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
@@ -57,8 +57,8 @@ title = Thảm trải chân giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải chân giường
 
 [cafeland.vn]
-match = -109.1%%
-title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
+match = -45.5%%
+title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.everonvn.vn]
