--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-02 22:34:52
+lastsearch = 2024-08-03 00:49:18
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOorh1XbD4YPxIYu9q4S5IFLu6gJrjzawajvNwVjlhGfX_7Q8Wo1v
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html?srsltid=AfmBOor-Y7CPPE5Ghv5Alqbh36QTsBWkngUwjb4Pb-LJCWeqMRJ4In5f
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOorluREQw26_sa0_7Q9hRYkJcIHvzcLME84vDkOOKeCktwEuMvXQ
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [demhong.vn]
 match = -22.2%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -48.1%%
-title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone?srsltid=AfmBOopH8inNXqUQwxudO4gnAi3sqMxMSPQL9xIXeQFi3D0LYbL9X4ut
+match = -44.4%%
+title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
