--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-02 22:33:04
+lastsearch = 2024-08-03 01:33:08
 
 [burningman.org]
 match = -60.0%%
@@ -865,4 +865,14 @@ url = https://www.medicalnewstoday.com/articles/179316
 match = -33.3%%
 title = Garmin International | Home
 url = https://www.garmin.com/en-US/
+
+[www.fppc.ca.gov]
+match = -55.6%%
+title = FPPC Home
+url = https://www.fppc.ca.gov/
+
+[www.saclibrary.org]
+match = -220.0%%
+title = Sacramento Public Library - Books are just the beginning
+url = https://www.saclibrary.org/
 
