--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-03 00:20:08
+lastsearch = 2024-08-03 01:21:14
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -139,7 +139,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [vuanem.com]
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
-url = https://vuanem.com/brand/everon?srsltid=AfmBOorEcuSLsGFwHdqMTL6BI5TQzMRdz2_bN180UCX3A9Solmoi0KV_
+url = https://vuanem.com/brand/everon
 
 [www.khodemthanhdo.com]
 match = -20.0%%
