--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-02 21:44:44
+lastsearch = 2024-08-03 01:28:17
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOoouv-naNYBANM_vRKO-iDErX2DiZ0E4cDnU-bl88IJItEaMK0Ms
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/?srsltid=AfmBOoocemWV7SW3C7OyfxoBTWLC7EPzwPfMXyvMjVRt6J2erH-J2zeO
+url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoo9sh6sqyN_RFc5uCAxBu-vv4PYbEfv94Cd2yZNrNgSeT02QRzt
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
 match = 14.8%%
-title = Bộ chăn ga gối Everon ESM-19016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
+title = Bộ chăn ga gối Everon EPM-19064
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-19064-1499
 
 [everonvietnam.com]
 match = 36.0%%
@@ -47,9 +47,9 @@ title = Everon Bedding Collection 2019 by quangbv
 url = https://issuu.com/quangbv/docs/everon-bedding_collection_2019-comp
 
 [vn.biggo.com]
-match = -25.9%%
-title = Everon 2m giá rẻ Tháng 5,2024|BigGo Việt Nam
-url = https://vn.biggo.com/s/everon+2m/
+match = -48.1%%
+title = Bộ Chăn Hè Everon giá rẻ Tháng 4,2024|BigGo Việt Nam
+url = https://vn.biggo.com/s/bộ+chăn+hè+everon/
 
 [bonbonbon.com]
 match = 11.1%%
