--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-02 23:32:25
+lastsearch = 2024-08-03 01:29:40
 
 [www.instagram.com]
-match = -123.1%%
-title = Chan Dior Sunshade (@chan_dior_sunshade)
-url = https://www.instagram.com/chan_dior_sunshade/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
 match = -276.9%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -46.2%%
-title = Dior official website | DIOR
-url = https://www.dior.com/
+match = -30.8%%
+title = Dior official website
+url = https://www.dior.com/en_hk
 
 [www.gettyimages.fr]
 match = -253.8%%
@@ -345,4 +345,9 @@ url = https://www.imdb.com/list/ls066069202/
 match = -230.8%%
 title = Christian Dior Omotesando - All You Need to Know ...
 url = https://www.tripadvisor.com/Attraction_Review-g1066456-d16707145-Reviews-Christian_Dior_Omotesando-Shibuya_Tokyo_Tokyo_Prefecture_Kanto.html
+
+[www.carousell.com.my]
+match = -176.9%%
+title = Hoi Yi Chan's Reviews on Carousell Hong Kong
+url = https://www.carousell.com.my/u/justforu.shop/reviews/
 
