--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-02 23:51:50
+lastsearch = 2024-08-03 01:30:01
 
 [shopee.vn]
 match = -162.5%%
@@ -250,4 +250,9 @@ url = https://www.petmart.vn/tim-hieu-su-bien-doi-mau-sac-tren-lung-mai-rua-canh
 match = -200.0%%
 title = Máy lọc nước giá rẻ, chất lượng, trả góp 0%%, giao hàng ...
 url = https://dienmaycholon.com/may-loc-nuoc
+
+[gaumiao.com]
+match = 6.2%%
+title = HK-Nhà vệ sinh mai rùa lớn
+url = https://gaumiao.com/hk-nha-ve-sinh-mai-rua-lon
 
