--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 00:52:13
+lastsearch = 2024-08-03 01:31:46
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fiz6uw1&sig=ACfU3U17si6ihMLRgVKeRkTMXUHPzf7_aw&hl=en&sa=X&ved=2ahUKEwjI4IDm79aHAxWQHjQIHT9TBQoQ6AF6BAgcEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fiz8yt4&sig=ACfU3U0jidm_hwNUUN-L1RxezoEKvyjSQQ&hl=en&sa=X&ved=2ahUKEwjA_rjR-NaHAxV_F1kFHWs2IpUQ6AF6BAggEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
