--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-03 00:56:45
+lastsearch = 2024-08-03 01:30:23
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = 25.0%%
 title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOooewT9O8FNqvDUu-kfmGg1M3GJY0JQkd-JQLwM_9zXcATsg9Bng
 
 [www.diepxuan.com]
 match = 100.0%%
