--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-02 22:46:15
+lastsearch = 2024-08-03 01:25:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
 
 [chieutrelanlan.com]
-match = -87.0%%
-title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đẹp.
-url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
+match = -82.6%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [demxanh.com]
 match = -30.4%%
