--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 23:28:13
+lastsearch = 2024-08-03 01:25:07
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -217.6%%
 title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnUvyX6H&sig=ACfU3U3Q-_-QItXjALWrp1-tDlhH8s-3Zg&hl=en&sa=X&ved=2ahUKEwi6k-KC3daHAxU0v4kEHWY_MMcQ6AF6BAgZEAM
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnUwvYZM&sig=ACfU3U2AZQYV5xfIJ5hmgwBs0WA5s9HEVg&hl=en&sa=X&ved=2ahUKEwiumrST99aHAxXPFFkFHfkyIJUQ6AF6BAgYEAM
 
 [tax.vermont.gov]
 match = -29.4%%
