--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-03 00:58:53
+lastsearch = 2024-08-03 01:21:56
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoIKuo9&sig=ACfU3U2TjEmWOgocpzZBAZ2lV7J8LqRvPg&hl=en&sa=X&ved=2ahUKEwjWg-f-49aHAxV1ElkFHQOEJJUQ6AF6BAg6EAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoJFujb&sig=ACfU3U0R6IgwFwxrL-9YGq0SlflWiXuDAA&hl=en&sa=X&ved=2ahUKEwj69v639taHAxUcD1kFHWAuE5QQ6AF6BAgkEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
