--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-03 00:47:29
+lastsearch = 2024-08-03 01:18:09
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -43,13 +43,13 @@ url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [www.diepxuan.com]
-match = 13.5%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = 41.5%%
+title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
 
 [everon.online]
 match = 31.9%%
