--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-03 00:21:32
+lastsearch = 2024-08-03 01:30:44
 
 [www.amazon.com]
 match = -100.0%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = 18.2%%
-title = Bọc ghế da ô tô
-url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
+match = -318.2%%
+title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
+url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
 
 [github.com]
 match = -81.8%%
@@ -104,7 +104,7 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -290.9%%
 title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
-url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html?srsltid=AfmBOoqyFMYgMC0RcwSywzfJ8IPxCWLzBewOX6FR2BClPypoiWZa6PIn
 
 [richhome.vn]
 match = -190.9%%
@@ -200,4 +200,9 @@ url = https://epione.vn/collections/ghe-cong-thai-hoc
 match = -227.3%%
 title = Bọc Ghế Da Ô Tô Giá Rẻ TPHCM - XE TẢI HÀ NỘI
 url = https://xetaihanoi.edu.vn/boc-ghe-da-o-to-gia-re-tphcm/
+
+[vaivinaco.com]
+match = -136.4%%
+title = Tại sao nên chọn bọc da đệm ghế gỗ?
+url = https://vaivinaco.com/tai-sao-nen-chon-boc-da-dem-ghe-go/
 
