CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-03 00:56:24
+lastsearch = 2024-08-03 02:22:03
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -155.0%%
-title = Tether Reports Record $5.2 Billion Profit in First Half of 2024
-url = https://cryptonews.com/news/tether-reports-record-5-2-billion-profit-in-first-half-of-2024.htm
+match = -105.0%%
+title = Riot Platforms Reports Q2 Loss After Bitcoin Halving
+url = https://cryptonews.com/news/riot-platforms-reports-q2-loss-after-bitcoin-halving.htm
 
 [www.thespike.gg]
 match = -75.0%%
