--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-03 00:17:22
+lastsearch = 2024-08-03 02:25:08
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.21
 [www.lazada.vn]
 match = -136.8%%
 title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOopMgcZofnRjQ54bnOYyYNZR89-RHqzRHwP-YQ-bYdeqRB2NALFQ
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
@@ -32,8 +32,8 @@ title = Ga chống thấm cao cấp Everon
 url = https://www.everonvn.vn/chi-tiet/ga-chong-tham-cao-cap-everon.html
 
 [phuonghoangphat.com]
-match = -63.2%%
-title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
+match = -84.2%%
+title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= 120k ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
@@ -69,7 +69,7 @@ url = https://pubs.acs.org/doi/10.1021/acs.inorgchem.3c00311
 [ketsatdaiphu.vn]
 match = -94.7%%
 title = Bộ Ga Gối Và Vỏ Chăn Nỉ Lông Nhung( Tặng Kèm 01 ...
-url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/?srsltid=AfmBOop82LY-j-V7O7Bh1t-rYeuRbt4PuebJda1TrNhB20MoI-_QmirR
+url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/
 
 [www.tiktok.com]
 match = -210.5%%
@@ -79,7 +79,7 @@ url = https://www.tiktok.com/@funkyglassworks/video/7135866426522537262
 [lovemama.vn]
 match = -131.6%%
 title = Ga chống thấm LoveMama vải Cotton chính hãng, giá tốt 2024
-url = https://lovemama.vn/ga-chong-tham?srsltid=AfmBOorpycAwMcTRhyN0TK_Lr78K9WC2cYRSOFk3Ae8AHX3dFasr_xlj
+url = https://lovemama.vn/ga-chong-tham
 
 [www.shelbynews.com]
 match = -157.9%%
