--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-02 22:43:09
+lastsearch = 2024-08-03 02:23:47
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -40.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html?srsltid=AfmBOorC4SBjpsj2Hgj6SqdfAFBkCz-94e3JBj1Ytn0w2D5A_4nh4ILJ
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
 
 [www.facebook.com]
 match = -75.0%%
