--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-02 23:45:56
+lastsearch = 2024-08-03 02:20:01
 
 [en.wikipedia.org]
 match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -227,9 +227,9 @@ title = Korean War Armistice Agreement
 url = https://www.usfk.mil/Portals/105/Documents/SOFA/G_Armistice_Agreement.pdf
 
 [cryptonews.com]
-match = -87.0%%
-title = South Korean Exchanges to Pay 300M Won Supervisory Fee
-url = https://cryptonews.com/news/south-korean-exchanges-to-pay-300m-won-supervisory-fee.htm
+match = -73.9%%
+title = Riot Platforms Reports Q2 Loss After Bitcoin Halving
+url = https://cryptonews.com/news/riot-platforms-reports-q2-loss-after-bitcoin-halving.htm
 
 [www.op.gg]
 match = -104.3%%
