CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-03 01:48:18
+lastsearch = 2024-08-03 02:29:55
 
 [en.wikipedia.org]
-match = -15.4%%
-title = Takeru Segawa
-url = https://en.wikipedia.org/wiki/Takeru_Segawa
+match = -45.5%%
+title = Tetsu Inada
+url = https://en.wikipedia.org/wiki/Tetsu_Inada
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -32,9 +32,9 @@ title = Translational strategies for neuroprotection in ischemic stroke
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
-match = -152.9%%
-title = Atlas classique Vidal-lablache - Google Books Result
-url = https://books.google.com/books?id=czYPAQAAMAAJ&pg=PT3&lpg=PT3&dq=chan+5+kg+kq+song&source=bl&ots=WY9WwToHjA&sig=ACfU3U2RwgeB_eJr0LkFm4oWke2fvLkdHg&hl=en&sa=X&ved=2ahUKEwi_sunz4NaHAxXQq4kEHRb9A84Q6AF6BAgZEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWJJ0v6f&sig=ACfU3U3xTvoUrjtBsdL_jyg1WCJiwJU8Yg&hl=en&sa=X&ved=2ahUKEwiF_ajRhdeHAxWNADQIHTbzDowQ6AF6BAgnEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -188.2%%
-title = How to audition for SM, YG, JYP, Source Music, Cube and ...
-url = https://www.quora.com/How-do-I-audition-for-SM-YG-JYP-Source-Music-Cube-and-KQ-online-in-2020-Can-you-put-the-links-for-official-sites
+match = -129.4%%
+title = Does KQ Entertainment treat their idols well?
+url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopU-LamuJ08iubFRRR-UWit2MMIkApC_OPJFVSAEewP3hEnvJdB
 
 [www.kvaser.cn]
 match = -5.9%%
