--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-02 21:45:31
+lastsearch = 2024-08-03 02:27:33
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOor2g8pCI5kRt4BYdcJdb1ajap0K6WpAovhMevqf0lfAmDxxYVsU
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorHWhOVAxGFOOcOluWE90FzG_oip-LOPK66iGojz0szBviicOqj
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -130,4 +130,14 @@ url = https://dienmaycholon.com/do-dung-gia-dinh?t=chan-ga-goi-nem
 match = 4.8%%
 title = Bộ chăn ga gối Litter Girl Ctt112
 url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
+
+[jysk.vn]
+match = -61.9%%
+title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/bo-vo-chan-goi-ga
+
+[runa.vn]
+match = -14.3%%
+title = Bộ Chăn Ga Gối Muslin 4 Lớp Màu Kem ...
+url = https://runa.vn/bo-chan-ga-goi-muslin-4-lop-mau-kem
 
