--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-02 23:55:16
+lastsearch = 2024-08-03 02:37:20
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -335,4 +335,9 @@ url = https://trangbom.dongnai.gov.vn/SiteAssets/Lists/ThongBao/EditForm/01-Ho s
 match = -21.4%%
 title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
+
+[ginobau.de]
+match = 25.0%%
+title = Môn Túi Tạo Nhân Hậu đặt
+url = https://ginobau.de/6166150-túi-nhân-đặt-môn-hậu-tạo.html
 
