--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-03 00:38:46
+lastsearch = 2024-08-03 02:29:15
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -415,4 +415,24 @@ url = https://fujimart.vn/dia-chi-cac-chi-nhanh/
 match = -246.7%%
 title = Xe buýt đến sân bay Nội Bài gồm những tuyến xe nào, lộ ...
 url = https://mt.gov.vn/tk/tin-tuc/55347/xe-buyt-den-san-bay-noi-bai-gom-nhung-tuyen-xe-nao--lo-trinh-ra-sao.aspx
+
+[vksndtc.gov.vn]
+match = -246.7%%
+title = Lễ trao giải toàn đoàn và tổng kết Hội thao ngành Kiểm ...
+url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-toi-cao/le-trao-giai-toan-doan-va-tong-ket-hoi-thao-nganh--d2-t12364.html
+
+[www.baodongthap.vn]
+match = -233.3%%
+title = Phó Chủ tịch UBND tỉnh Trần Trí Quang giải quyết khiếu ...
+url = https://www.baodongthap.vn/phap-luat/pho-chu-tich-ubnd-tinh-tran-tri-quang-giai-quyet-khieu-nai-cua-cong-dan-124429.aspx
+
+[www.sacombank.com.vn]
+match = 6.7%%
+title = Danh sách ATM/ĐGD
+url = https://www.sacombank.com.vn/trang-chu/danh-sach-atm-dgd.html
+
+[baobacgiang.vn]
+match = -213.3%%
+title = 13 điểm mới của Luật trật tự an toàn giao thông đường bộ
+url = https://baobacgiang.vn/13-diem-moi-cua-luat-trat-tu-an-toan-giao-thong-duong-bo-103308.bbg
 
