--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 01:31:46
+lastsearch = 2024-08-03 02:24:22
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fiz8yt4&sig=ACfU3U0jidm_hwNUUN-L1RxezoEKvyjSQQ&hl=en&sa=X&ved=2ahUKEwjA_rjR-NaHAxV_F1kFHWs2IpUQ6AF6BAggEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fizbzz0&sig=ACfU3U1PWGxspr6U63iLMsf833sH0aP3CA&hl=en&sa=X&ved=2ahUKEwi2z6GyhNeHAxVeGTQIHc7DBf0Q6AF6BAgZEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
