--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-02 20:32:01
+lastsearch = 2024-08-03 02:34:53
 
 [demre.com.vn]
 match = 76.0%%
@@ -14,7 +14,7 @@ url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+url = https://www.facebook.com/chieunhuathailan/
 
 [kyoryo.vn]
 match = 12.0%%
@@ -34,12 +34,12 @@ url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 [www.diepxuan.com]
 match = 20.0%%
 title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOoo8CEHtjcJjIS8P2eygDPShXieOCOYe-ZqKX6GcTtg9p-zMWA4n
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOoo_HpPsuz6LbbSaln3R9RKrMWsPMEuBpYiLJ6Z5b5LfFgyRoTfm
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOorNOylDLwS1zxoGRpEw9wShQqUAwXM55YvksXAGz0ZudWGcDPCB
+match = -12.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqnYuEs8xxtdZi_QGsnypK8RKiHdtO5vPg3Hfhy1W_9R9-SNm4h
 
 [shopee.vn]
 match = 36.0%%
