--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-03 01:26:53
+lastsearch = 2024-08-03 02:35:13
 
 [www.diepxuan.com]
-match = -10.0%%
-title = Điệp Xuân Chiếu nhựa
-url = https://www.diepxuan.com/chieu/chieu-nhua.html?p=2
+match = 38.7%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOoo1XQ5Jm5GxKq-dP5DfOESzu-HaeNrGWc4sBH9_SToIq11gfUSn
 
 [shopee.vn]
-match = 32.3%%
-title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
+match = 19.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [m.facebook.com]
 match = 19.4%%
