--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 25.0%%
-title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
 match = 50.0%%
