--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-02 16:14:09
+lastsearch = 2024-08-03 02:25:47
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+match = -14.3%%
+title = Everon Quảng Bình Ga phủ ESM20013 180x200
+url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
