--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-03 00:17:44
+lastsearch = 2024-08-03 02:40:28
 
 [shopee.vn]
-match = -57.1%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -90.5%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -34,7 +34,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -66.7%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoowOTVLM7drT5niMin0DP7S2jvtb8eNfPwvwoLe30ekz3q1d8yq
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
 match = -119.0%%
