--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-03 01:50:46
+lastsearch = 2024-08-03 02:34:32
 
 [www.diepxuan.com]
-match = -131.2%%
-title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+match = -125.0%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -31.2%%
-title = Huda Beauty Best Lip Liner
-url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [archiveofourown.org]
 match = -137.5%%
@@ -222,7 +222,12 @@ title = kemba walker 92 points - kemba walker game log - ckd737.com
 url = https://ckd737.com/product/qnxrfoyn-59/
 
 [fkik433.com]
-match = -125.0%%
-title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16
-url = https://fkik433.com/blog/vljjrwrj-233/
+match = -137.5%%
+title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - fkik433.com
+url = https://fkik433.com/product/lrrxzabx-255/
+
+[fowm924.com]
+match = -193.8%%
+title = tui warmdream 16 - The third continent / Wings of Fire Book 16
+url = https://fowm924.com/blog/vljjrwrj-233/
 
