--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-03 02:25:04
+lastsearch = 2024-08-03 02:49:34
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoJJsi9&sig=ACfU3U22HmJkRClY9DOd0p6ztH8MtxtB-A&hl=en&sa=X&ved=2ahUKEwizxL_GhNeHAxXnCTQIHTKwCoUQ6AF6BAgnEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoJLmp9&sig=ACfU3U1dyYLjBCP8iMZkbP5f_P9PPecyYA&hl=en&sa=X&ved=2ahUKEwjOpb2DiteHAxW9KFkFHZJcH5UQ6AF6BAgoEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
