--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-03 01:46:35
+lastsearch = 2024-08-03 02:46:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = 7.7%%
-title = bộ Chăn Ga Gối Cotton 3F Kẻ Ngang-màu đen
-url = https://shopee.vn/bộ-Chăn-Ga-Gối-Cotton-3F-Kẻ-Ngang-màu-đen-i.99089604.5287351365
+match = -34.6%%
+title = Bộ Chăn Ga Gối Cotton 3F Cao Cấp SIêu Nhiều Mẫu Mềm ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-3F-Cao-Cấp-SIêu-Nhiều-Mẫu-Mềm-Mịn-Chuyên-Dùng-Cho-Khách-Sạn-Bộ-Chăn-Ga-Gối-Khách-Sạn-i.5009645.18890523206
 
 [bedding.vn]
 match = -42.3%%
