--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-03 00:46:06
+lastsearch = 2024-08-03 02:55:31
 
 [shopee.vn]
 match = 7.4%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
-match = -44.4%%
-title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/men-long-tuyet-thai/
+match = -48.1%%
+title = Chăn Nhung Mùa Đông Thành Công,Loại 2kg, 3kg, 4kg, 5kg
+url = https://www.lazada.vn/products/chan-nhung-long-tuyet-chan-nhung-mua-dong-thanh-congloai-2kg-3kg-4kg-5kg-i2043299346.html
 
 [tiki.vn]
 match = 11.1%%
