--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-02 22:55:36
+lastsearch = 2024-08-03 02:44:42
 
 [shopee.vn]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = -13.0%%
-title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61553157173242/
+match = 8.7%%
+title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
+url = https://m.facebook.com/CHIEUNHUAHATRANG/
 
 [tiki.vn]
 match = -21.7%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOordB_SJkL3VWzZbSKac6Z-I9CnnHK68J4pDeBxfKnIdJySjPuvU
 
 [baothaibinh.com.vn]
 match = 17.4%%
