--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-02 22:19:54
+lastsearch = 2024-08-03 02:55:09
 
 [www.lazada.vn]
 match = -60.9%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/?locale=uk_UA
+url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
 match = -34.8%%
