--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-02 22:33:27
+lastsearch = 2024-08-03 03:00:21
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -73,8 +73,8 @@ url = https://www.imdb.com/list/ls055304256/
 
 [www.reuters.com]
 match = -108.7%%
-title = Dutch police disperse anti-lockdown protesters in Amsterdam
-url = https://www.reuters.com/business/media-telecom/dutch-police-disperse-thousands-protesting-against-lockdown-measures-2022-01-02/
+title = President Trump asked the Proud Boys to 'stand by.' Who ...
+url = https://www.reuters.com/article/world/president-trump-asked-the-proud-boys-to-stand-by-who-are-they-idUSKBN26L3PK/
 
 [escholarship.mcgill.ca]
 match = 8.7%%
@@ -127,9 +127,9 @@ title = the #leaguecosplay in Seoul is unmatched 🔥 #worlds2023 ...
 url = https://www.tiktok.com/@leagueoflegends/video/7302634740094438686?lang=en
 
 [30rates.com]
-match = -43.5%%
-title = USD TO KRW TODAY AND FORECAST TOMORROW, ...
-url = https://30rates.com/usd-to-krw-today-forecast-dollar-to-won
+match = -39.1%%
+title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
+url = https://30rates.com/riot-stock
 
 [www.google.com]
 match = 0.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -73.9%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
