--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-03 02:14:27
+lastsearch = 2024-08-03 02:44:23
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -100.0%%
-title = Minya Pu
-url = https://profiles.ucsd.edu/minya.pu
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [som.cuanschutz.edu]
 match = -110.5%%
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -142.1%%
-title = Intensive blood pressure reduction with intravenous ...
-url = https://pubmed.ncbi.nlm.nih.gov/30739745/
+match = -157.9%%
+title = Inheritance of deleterious mutations at both BRCA1 and ...
+url = https://pubmed.ncbi.nlm.nih.gov/27836010/
 
 [www.sjsu.edu]
 match = -105.3%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -152.6%%
-title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
-url = https://evstamps.hibid.com/lot/187490381
+match = -110.5%%
+title = Canada Stamps 1942-1965 neatly mounted on Scott
+url = https://evstamps.hibid.com/lot/187490445
 
 [ltg.gov.vi]
 match = -168.4%%
