--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-02 20:20:49
+lastsearch = 2024-08-03 03:18:09
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -150.0%%
-title = TUI on LinkedIn: #taxibot | 16 comments
-url = https://www.linkedin.com/posts/tuigroup_taxibot-activity-7185656115815174144-FIJx
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -497,7 +497,7 @@ title = Miss Cosmo added a new photo — at Thung Nham...
 url = https://m.facebook.com/100070582791098/photos/528788106150611/
 
 [www.seascanner.com]
-match = 8.3%%
-title = TUI Cruise Deals
+match = -25.0%%
+title = TUI Cruises 2022-2023
 url = https://www.seascanner.com/tui-cruises
 
