CI images update

--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-03 02:40:51
+lastsearch = 2024-08-03 04:17:57
 
 [bilystore.vn]
 match = -95.2%%
@@ -200,4 +200,9 @@ url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den?srsltid=AfmB
 match = 0.0%%
 title = Giường tầng sắt GT14D - Govi
 url = https://govi.vn/product/giuong-tang-sat-gt14d/
+
+[thamht.vn]
+match = -104.8%%
+title = Kinh nghiệm chọn thảm phòng ngủ phù hợp cho với các ...
+url = https://thamht.vn/blogs/best-seller/kinh-nghiem-chon-tham-phong-ngu-phu-hop-cho-voi-cac-kich-thuoc-giuong
 
