--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-03 01:30:01
+lastsearch = 2024-08-03 04:18:38
 
 [shopee.vn]
 match = -162.5%%
@@ -17,9 +17,9 @@ title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
-match = 28.6%%
-title = Con rùa vũ trụ
-url = https://vi.wikipedia.org/wiki/Con_rùa_vũ_trụ
+match = -75.0%%
+title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
 
 [tuongdamynghe.com]
 match = 6.2%%
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = -37.5%%
-title = Tác dụng của mai rùa với sức khỏe
-url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-mai-rua-voi-suc-khoe-vi
+match = 0.0%%
+title = posts-vi-84.xml
+url = https://www.vinmec.com/sitemap/posts-vi-84.xml
 
 [www.youtube.com]
 match = -131.2%%
