--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-03 00:37:46
+lastsearch = 2024-08-03 04:16:14
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = 0.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [foreverbedding.net]
 match = 0.0%%
@@ -150,4 +150,9 @@ url = https://sinhvien.ufm.edu.vn/hot47990.html
 match = 70.4%%
 title = CHIẾU ĐIỀU HÒA ( KHÔNG MỀN)
 url = https://chanragoinemngockhue.com/chieu-dieu-hoa-khong-men
+
+[nemhana.com]
+match = -25.9%%
+title = Chiếu điều hoà là gì? Nằm chiếu điều hoà có tốt không?
+url = https://nemhana.com/chieu-dieu-hoa/
 
