--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-02 18:30:21
+lastsearch = 2024-08-03 04:22:10
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -97,9 +97,9 @@ title = Cookie Policy
 url = https://www.mancity.com/cookie-policy
 
 [moveek.com]
-match = -168.8%%
-title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/lotte-kosmo-tay-ho/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [midumenaq7.com]
 match = -175.0%%
@@ -209,7 +209,7 @@ url = https://vaas.vn/vi/giong/giong-lac-l14
 [www.vinaseed.com.vn]
 match = -56.2%%
 title = Hướng dẫn gieo trồng giống lạc L14
-url = https://www.vinaseed.com.vn/vi/news/m25/huong-dan-gieo-trong-giong-lac-l14-150.htm
+url = https://www.vinaseed.com.vn/vi/news/m35/huong-dan-gieo-trong-giong-lac-l14-150.htm
 
 [www.chieuduong.vn]
 match = -87.5%%
