--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-02 20:53:34
+lastsearch = 2024-08-03 04:14:27
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+match = -127.3%%
+title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
+url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
 
 [flexhouse.vn]
 match = -104.5%%
@@ -77,9 +77,9 @@ title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
 url = https://vn.my-best.com/37075
 
 [www.airbnb.com.vn]
-match = -122.7%%
-title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
-url = https://www.airbnb.com.vn/rooms/1258488
+match = -136.4%%
+title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
+url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
 match = -109.1%%
