CI images update

--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-03 04:38:18
+lastsearch = 2024-08-03 05:18:15
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -11.8%%
+title = Pieter Dorrestein
+url = https://profiles.ucsd.edu/pieter.dorrestein
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,19 +52,19 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jennifer Puck, MD
-url = https://profiles.ucsf.edu/jennifer.puck
+match = 5.6%%
+title = Elizabeth Wick, MD
+url = https://profiles.ucsf.edu/elizabeth.wick
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -150.0%%
+title = Consensus Guidelines on the Use of Intravenous Ketamine ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
 
 [profiles.ucla.edu]
 match = 0.0%%
-title = Daniel H Geschwind
-url = https://profiles.ucla.edu/daniel.geschwind
+title = Stanley F Nelson
+url = https://profiles.ucla.edu/stanley.nelson
 
 [www.sec.gov]
 match = -20.0%%
@@ -410,4 +410,14 @@ url = https://profiles.icts.uci.edu/jaime.landman
 match = 0.0%%
 title = HVTN 703/HPTN 081
 url = https://www.hptn.org/sites/default/files/inline-files/HVTN703-HPTN081_v3.0_FINAL.docx.pdf
+
+[www.jacc.org]
+match = -120.0%%
+title = 2022 AHA/ACC/HFSA Guideline for the Management of ...
+url = https://www.jacc.org/doi/10.1016/j.jacc.2021.12.012
+
+[s3.amazonaws.com]
+match = -171.4%%
+title = PROGRAM
+url = https://s3.amazonaws.com/files.oncologymeetings.org/prod/s3fs-public/2024-05/AM24-Program.pdf
 
