CI images update

--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-03 01:34:49
+lastsearch = 2024-08-03 05:31:47
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoqpwX4qMlyxNQoyYVdZ9v31d0MCJrD3v7KUt65zNQhLs-4Rd9oa
 
 [www.noithatpassion.com]
 match = -52.2%%
