--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-03 02:44:23
+lastsearch = 2024-08-03 05:34:10
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = Dean's List Students Named for Fall 2023 - UA News Center
 url = https://news.ua.edu/2024/01/deans-list-students-named-for-fall-2023/
 
 [dcc.ligo.org]
-match = -194.7%%
-title = LSC February 2017 author list---LIGO-M1700032 8/24 ... - LIGO DCC
-url = https://dcc.ligo.org/public/0140/M1700032/012/LSC-Authors-Feb2017-cqg.tex
+match = -157.9%%
+title = https://dcc.ligo.org/public/0150/M1800027/005/LSC-...
+url = https://dcc.ligo.org/public/0150/M1800027/005/LSC-Authors-Feb-2018.tex
 
 [fsapartners.ed.gov]
 match = -52.6%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -110.5%%
-title = Canada Stamps 1942-1965 neatly mounted on Scott
-url = https://evstamps.hibid.com/lot/187490445
+match = -152.6%%
+title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
+url = https://evstamps.hibid.com/lot/187490381
 
 [ltg.gov.vi]
 match = -168.4%%
