--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-02 23:49:19
+lastsearch = 2024-08-03 05:32:48
 
 [www.instagram.com]
-match = -23.1%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -223.1%%
+title = Yuki Hoi (@hoisoki) • Instagram photos and videos
+url = https://www.instagram.com/hoisoki/?hl=en
 
 [www.linkedin.com]
-match = -84.6%%
-title = 415000+ "-yuki Chan" profiles
-url = https://www.linkedin.com/pub/dir/-yuki/Chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
