CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-02 20:50:41
+lastsearch = 2024-08-03 05:59:40
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -254,7 +254,7 @@ url = https://forevervacation.com/vietnam-travel-guide/vietnam-language
 [vietmytravel.com]
 match = -52.2%%
 title = Hành trình khám phá tour du lịch biển Thái Bình Dương
-url = https://vietmytravel.com/tour/du-lich-bien-thai-binh-duong/?srsltid=AfmBOoqJHWFSERCGw5nCvSr9ZoBhChTuIuR4zMpYh8ogcstpzBsfoe9U
+url = https://vietmytravel.com/tour/du-lich-bien-thai-binh-duong/
 
 [www.ncb-bank.vn]
 match = -13.0%%
@@ -410,4 +410,9 @@ url = https://link.springer.com/chapter/10.1007/978-3-031-59110-5_21
 match = -73.9%%
 title = Dự báo thời tiết Thái Bình hôm nay và ngày mai chính xác
 url = https://kenhthoitiet.edu.vn/thai-binh
+
+[www.who.int]
+match = -82.6%%
+title = Dr Saia Ma'u Piukala được bổ nhiệm làm Giám đốc WHO ...
+url = https://www.who.int/vietnam/vi/news/detail/24-01-2024-dr-saia-ma-u-piukala--c-b--nhi-m-l-m-gi-m--c-who-khu-v-c-t-y-th-i-b-nh-d-ng
 
