--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-03 02:35:34
+lastsearch = 2024-08-03 05:54:52
 
 [shopee.vn]
 match = -25.9%%
@@ -42,9 +42,9 @@ title = Chăn lông tuyết l Bé Tuti shop
 url = https://betuti.vn/chan-long-tuyet
 
 [thitruongsi.com]
-match = -40.7%%
-title = Chăn tuyết Nhung mịn, nặng 1.1kg giá sỉ, giá bán buôn
-url = https://thitruongsi.com/chan-tuyet-nhung-min-nang-1-1kg-1903033.html
+match = -18.5%%
+title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
+url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
 match = -55.6%%
