--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-03 03:44:46
+lastsearch = 2024-08-03 05:59:19
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -121.1%%
-title = Cháu Vẽ Ông Mặt Trời ♪ Bé MAI VY Thần Đông Âm Nhạc ...
-url = https://www.youtube.com/watch?v=Rj_PwYmo8lg
+match = -152.6%%
+title = Cái cây xanh xanh | Nhạc Thiếu Nhi Hay Cho Bé | Vietnamese ...
+url = https://www.youtube.com/watch?v=Zpe5jtJ-2sY
 
 [dochoihoangthu.com]
 match = -121.1%%
