--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-03 04:36:53
+lastsearch = 2024-08-03 05:59:00
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopirbfr3lkxFoUigLBFgoy_I9EZKd8Q-b9SWwb9qjNFIxyAAVpL
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooN2R25VahU7qAaknJdeSIqZ_yYJQk9lqgadkcyV0wP2qPPYqen
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [suongtuyet.com]
-match = 18.5%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -29.6%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [russo.vn]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOorbrV0B3uaAavfGK4_I5R9z79P6hrf9SNWB2ABZ5s6QEvI5DPcp
 
 [mandep.vn]
 match = 37.0%%
