CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-03 00:14:57
+lastsearch = 2024-08-03 06:18:08
 
 [www.galottery.com]
 match = -7.7%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -330.8%%
-title = Anthropological Papers of the American Museum of Natural History
-url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=Hd6xdzgtBJ&sig=ACfU3U3Re7DbX-CJ9pC4Iy99AhuWC5LMHQ&hl=en&sa=X&ved=2ahUKEwiQt-ydwNaHAxWsH0QIHZtXHbwQ6AF6BAgXEAM
+match = -161.5%%
+title = Crystal Data: Inorganic compounds 1967-1969
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx_B33G2&sig=ACfU3U3v6xn5d5a1T-rCpUgGFDUCwQR1-A&hl=en&sa=X&ved=2ahUKEwjmxs_SuNeHAxXAD1kFHZMDNmwQ6AF6BAgaEAM
 
 [ottawabraves.com]
 match = -292.3%%
