--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-03 01:54:03
+lastsearch = 2024-08-03 06:19:12
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -217.6%%
 title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnUwvYZM&sig=ACfU3U2AZQYV5xfIJ5hmgwBs0WA5s9HEVg&hl=en&sa=X&ved=2ahUKEwiumrST99aHAxXPFFkFHfkyIJUQ6AF6BAgYEAM
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnUys22G&sig=ACfU3U3y5DzeVZxYhR52OA5iD01vhj84iQ&hl=en&sa=X&ved=2ahUKEwjJhO3wuNeHAxUTElkFHcGCEQMQ6AF6BAgrEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -122,9 +122,9 @@ title = Home | Occupational Safety and Health Administration
 url = https://www.osha.gov/
 
 [en.wikipedia.org]
-match = -11.8%%
-title = Vietnam's Next Top Model
-url = https://en.wikipedia.org/wiki/Vietnam's_Next_Top_Model
+match = -111.8%%
+title = United States Department of Homeland Security
+url = https://en.wikipedia.org/wiki/United_States_Department_of_Homeland_Security
 
 [mtrevenue.gov]
 match = -52.9%%
