--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-03 05:59:40
+lastsearch = 2024-08-03 06:11:58
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Vietnamese_language
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrXhdV2G&sig=ACfU3U2Qbpg6KuHacGywh549LvgpDtFPrQ&hl=en&sa=X&ved=2ahUKEwiPmPzAmdaHAxU7v4kEHQ-0Cn0Q6AF6BAgjEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYc6PYO&sig=ACfU3U0W5lgrsykglr6lUbBx56ZgXUXEmg&hl=en&sa=X&ved=2ahUKEwjZ_o-it9eHAxWRF1kFHS3MLRIQ6AF6BAgjEAM
 
 [www.travelweekly.com]
 match = -87.0%%
