--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-03 05:30:42
+lastsearch = 2024-08-03 06:29:58
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -24.0%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -72.0%%
-title = Ghen Cô Vy| NIOEH x K.HƯNG x MIN x ERIK | WASHING ...
-url = https://www.youtube.com/watch?v=BtulL3oArQw
+match = -60.0%%
+title = BÍCH PHƯƠNG - Nói Thương Nhau Thì Đừng Làm Trái Tim ...
+url = https://www.youtube.com/watch?v=2DuthnSIeYY
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -4.0%%
-title = Chính chủ gửi bán căn hộ chung cư ...
-url = https://m.facebook.com/groups/245093786896941/posts/1272667604139549/
+match = -92.0%%
+title = Hiểu Biết Hơn Mỗi Ngày | Mới có tí đã khóc mà đòi làm lớp ...
+url = https://m.facebook.com/groups/178976120262143/posts/897810761712005/
 
 [dantri.com.vn]
 match = -60.0%%
