--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-03 02:57:35
+lastsearch = 2024-08-03 06:32:00
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 37.0%%
-title = chăn tuyết thái lan sịn cao cấp
-url = https://shopee.vn/chăn-tuyết-thái-lan-sịn-cao-cấp-i.1126803410.22661927902
+match = -18.5%%
+title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
+url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
 
 [www.lazada.vn]
 match = 3.7%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -74.1%%
-title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
-url = https://www.youtube.com/watch?v=zGtjB2l6au4
+match = -66.7%%
+title = Ca nhạc kịch “Con Đò Lỡ Hẹn” | Minishow Birthday Jack Long ...
+url = https://www.youtube.com/watch?v=1hhWI_H4SKs
 
 [baodaknong.vn]
 match = -7.4%%
