--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-03 04:13:23
+lastsearch = 2024-08-03 06:42:05
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+match = -94.1%%
+title = Epithelial sodium channel (ENaC) family
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4756657/
 
 [books.google.com]
 match = -11.8%%
