--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-03 05:17:35
+lastsearch = 2024-08-03 06:30:40
 
 [www.dem365.vn]
-match = -61.9%%
-title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
+match = -81.0%%
+title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -114.3%%
-title = Chăn phao trần bông dày loại 1 bông hơi siêu nhẹ cao cấp ...
-url = https://shopee.vn/Chăn-phao-trần-bông-dày-loại-1-bông-hơi-siêu-nhẹ-cao-cấp-được-chọn-màu-i.78513158.5470278231
+match = -66.7%%
+title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/bộ chăn phao
 
 [suongtuyet.com]
 match = 28.6%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -33.3%%
 title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/?srsltid=AfmBOorIPKHNIxh_U7zEmSwkgpLLbSdixpq5X9JIC0ARkp6bkSBuIvKD
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
