--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-02 23:19:15
+lastsearch = 2024-08-03 06:27:33
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -75.0%%
-title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
-url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.conggiao.org]
 match = -68.8%%
