--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-03 06:01:43
+lastsearch = 2024-08-03 06:33:04
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -218.8%%
-title = tuyệt chiêu nối ống nước hai đầu cố định cực hay, cách sửa ...
-url = https://www.youtube.com/watch?v=DhNa7JeUr54
+match = -175.0%%
+title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
+url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
 
 [hawater.com.vn]
 match = -75.0%%
@@ -667,9 +667,9 @@ title = Cách Lần Hạt Mân Côi | CôngGiáo.org
 url = https://www.conggiao.org/cach-lan-hat-man-coi/
 
 [www.vaticannews.va]
-match = -106.2%%
-title = Tin Mừng và Lời Chúa ngày 16 tháng tám 2024
-url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/08/16.html
+match = -125.0%%
+title = Tin Mừng và Lời Chúa ngày 23 tháng chín 2024
+url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/09/23.html
 
 [www.vietnamplus.vn]
 match = -218.8%%
