--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-03 02:58:38
+lastsearch = 2024-08-03 06:42:28
 
 [www.diepxuan.com]
 match = -25.0%%
-title = Chiếu du lịch Việt Thái 200x220 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-du-lich-viet-thai-200x220.html
+title = Nệm caosu Liên Á L'ADOME 200x220x20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-caosu-lien-a-ladome-200x220x20.html
 
 [www.qcyc.ca]
 match = -53.6%%
