--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-02 23:48:23
+lastsearch = 2024-08-03 06:36:10
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
 match = -138.9%%
@@ -28,7 +28,7 @@ url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-
 
 [shopee.vn]
 match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
