--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-03 03:18:09
+lastsearch = 2024-08-03 06:31:41
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -291.7%%
-title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
+match = -308.3%%
+title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
