--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-08-03 02:36:16
+lastsearch = 2024-08-03 06:43:30
 
 [furlife.vn]
 match = 70.8%%
@@ -42,9 +42,9 @@ title = tvpoggibonsi
 url = http://www.poggibonsifacile.it/servicepage.php?titolo=tvpoggibonsi&link=xn--b1af6ak5a2c.xn--p1ai/43561893zwfe43a
 
 [www.museum.ru]
-match = -108.0%%
-title = bruno manser freundin: Mahadbt portal yojana Voldsom kritikk ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwtao.ru/1ikDfsafe
+match = -28.0%%
+title = 2024 Bandar Togel Online Aman Terpercaya
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn----7sbpggckxyhggn0ksbh.xn--p1ai/pD2YAfZfe43v
 
 [rerecord.library.columbia.edu]
 match = -17.6%%
