CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-02 23:42:49
+lastsearch = 2024-08-03 06:55:57
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -392,9 +392,9 @@ title = Gainesville Times - Gainesville Times
 url = https://www.gainesvilletimes.com/
 
 [www.linkedin.com]
-match = -207.7%%
-title = 20 FAQs on Trademark Registration in Bangladesh
-url = https://www.linkedin.com/pulse/20-faqs-trademark-registration-bangladesh-osman-gani-tuhin-ctxnc
+match = -200.0%%
+title = Maryam Gani - New York, New York, United States
+url = https://www.linkedin.com/in/maryam-gani-822aa4177
 
 [www.twmetals.com]
 match = -38.5%%
@@ -680,4 +680,9 @@ url = https://aging.georgia.gov/document/publication/elap-guardianship-2012pdf/d
 match = -253.8%%
 title = Gaugeable Tube Fittings and Adapter Fittings (MS-01-140
 url = https://www.swagelok.com/downloads/webcatalogs/en/ms-01-140.pdf
+
+[www.omnihotels.com]
+match = -123.1%%
+title = Omni Hotel at The Battery Atlanta
+url = https://www.omnihotels.com/hotels/atlanta-battery
 
