--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-03 02:18:14
+lastsearch = 2024-08-03 07:01:10
 
 [tiki.vn]
 match = -138.9%%
@@ -38,13 +38,13 @@ url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao
 
 [demxanh.com]
 match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
 match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+title = Bộ ga phủ Mystic-T 26 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-mystic-t-26
 
 [aeoneshop.com]
 match = -105.6%%
