--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOopSyT5tdXT4w74tWpzxsU-bGN-G9R6qGJqB44xrAqJckKHswdYf
 
 [shopee.vn]
 match = -78.3%%
