--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-03 03:46:53
+lastsearch = 2024-08-03 06:48:39
 
 [nemgiakho.com]
 match = 8.6%%
@@ -32,9 +32,9 @@ title = Nệm Liên Á - Mua Nệm Online Giảm Giá Lớn
 url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 
 [demxanh.com]
-match = 57.1%%
-title = Đệm cao su Liên Á Classic (dày 5cm, 10cm)
-url = https://demxanh.com/dem-cao-su-lien-a-classic.html
+match = 11.4%%
+title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [demcaosuliena.com]
 match = 48.0%%
@@ -63,7 +63,7 @@ url = https://thegioidemviet.vn/nem-cao-su-lien-a-classic/
 
 [www.thegioinemvip.com]
 match = -8.6%%
-title = Bảng giá Nệm Liên Á tháng 7/2024 Mới cùng khuyến mãi
+title = Bảng giá Nệm Liên Á tháng 8/2024 Mới cùng khuyến mãi
 url = https://www.thegioinemvip.com/bang-gia-nem-lien-a-khuyen-mai-moi-nhat.html
 
 [shopee.vn]
