CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-03 06:39:56
+lastsearch = 2024-08-03 08:03:40
 
 [everon.online]
 match = 19.2%%
@@ -29,7 +29,7 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOopi89zBXDxqCEw6ifIsO8jgwYqcC25jw-ddOF0dSixGwaZZVH4W
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.tiktok.com]
 match = -30.8%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@60giay.com/video/7398392800531729665
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVWJmL4E&sig=ACfU3U2Ohs2by-eL21STp1v89dlFQ7Jucw&hl=en&sa=X&ved=2ahUKEwjYxqbCvdeHAxX1NzQIHeioDVMQ6AF6BAgcEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVWJsCZz&sig=ACfU3U3PQ1CYnzXmYnqbtWKAutSrdrm4Xw&hl=en&sa=X&ved=2ahUKEwjAh4We0NeHAxWLF1kFHZUkAzkQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
+match = -84.6%%
+title = Tiết kiệm đến 50%% khi mua Anno 1602 History Edition trên ...
+url = https://store.steampowered.com/app/2820130/Anno_1602_History_Edition/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
 
 [vi.wikipedia.org]
 match = 3.8%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -88.5%%
 title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOopADKbIktdJaQrkiNC6sEa_6DHpZRRsEvRq2YGie9C9OoGYDq-j
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
 match = -69.2%%
