--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-03 02:34:53
+lastsearch = 2024-08-03 07:56:48
 
 [demre.com.vn]
-match = 76.0%%
-title = Chiếu nhựa cao cấp 180x200
-url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
+match = 61.1%%
+title = Chiếu nhựa 160x200
+url = https://demre.com.vn/chieu-nhua-160x200
 
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [kyoryo.vn]
 match = 12.0%%
@@ -34,12 +34,12 @@ url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 [www.diepxuan.com]
 match = 20.0%%
 title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOoo_HpPsuz6LbbSaln3R9RKrMWsPMEuBpYiLJ6Z5b5LfFgyRoTfm
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = -12.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqnYuEs8xxtdZi_QGsnypK8RKiHdtO5vPg3Hfhy1W_9R9-SNm4h
+match = 16.0%%
+title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
 
 [shopee.vn]
 match = 36.0%%
