--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-03 06:35:11
+lastsearch = 2024-08-03 08:09:34
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -102,9 +102,9 @@ title = Đã 16 ngày không ghi nhận ca mắc mới COVID-19 ở cộng ...
 url = https://baolamdong.vn/xahoi/202009/da-16-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-cong-dong-viet-nam-tai-khoi-dong-nhieu-duong-bay-quoc-te-3022510/
 
 [afhanoi.com]
-match = -85.7%%
-title = [Tuần Lễ Vàng 2024] Miễn phí 100%% 15 ca Thụ tinh trong ống ...
-url = https://afhanoi.com/tuan-le-vang-2024-mien-phi-15-ca-thu-tinh-trong-ong-nghiem-ivf-19-04-19-05-2024/
+match = -78.6%%
+title = [Tuần Lễ Vàng 2024] Miễn phí 15 ca Vi phẫu tinh hoàn tìm tinh ...
+url = https://afhanoi.com/tuan-le-vang-2024-mien-phi-15-ca-vi-phau-tinh-hoan-tim-tinh-trung-micro-tese-19-04-19-05-2024/
 
 [archive.org]
 match = 14.3%%
@@ -340,4 +340,9 @@ url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cu
 match = 25.0%%
 title = Môn Túi Tạo Nhân Hậu đặt
 url = https://ginobau.de/6166150-túi-nhân-đặt-môn-hậu-tạo.html
+
+[gametv.vn]
+match = -53.6%%
+title = Chi tiết Võ Đài 2024: Tối đa 16 người chơi với bản đồ mới ...
+url = https://gametv.vn/lmht/chi-tiet-vo-dai-2024-toi-da-16-nguoi-choi-voi-ban-do-moi-cung-trang-bi-va-loi-nang-cap-moi-Gwje4tJFWYmzSqTEoEe22T
 
