--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-03 04:32:04
+lastsearch = 2024-08-03 08:05:26
 
 [shopee.vn]
-match = -2.9%%
-title = Chiếu điều hòa cao su non Latex Thái Lan vải lụa Tencel ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-vải-lụa-Tencel-mịn-mát-hàng-loại-1-êm-ái-thoáng-mát-giải-nhiệt-mùa-hè-i.240825360.8533242025
+match = 2.9%%
+title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
+url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
 
 [olbedding.com]
 match = 11.8%%
@@ -82,9 +82,9 @@ title = Chiếu điều hòa cao su non hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu điều hòa cao su non
 
 [vtvhyundai.vn]
-match = 26.5%%
-title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
+match = 14.7%%
+title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [ru9.vn]
 match = 8.8%%
