--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-03 05:55:13
+lastsearch = 2024-08-03 08:03:01
 
 [demxanh.com]
 match = 38.2%%
 title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOor_5b4IdTb-uMAcs9HTD5KRmd131Y6adr9OTg-yJjTtxPGs7emR
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [shopee.vn]
 match = 23.5%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non 5d
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOooTvM6xt0RGWsv-hNDT8uukKoWH4MhwhPK8AFiNsbMKmqkHVL7u
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
 
 [demchinhhang.com]
 match = 53.1%%
@@ -69,7 +69,7 @@ url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOooAiFwI_cNbgthWk5BjVb-BFz1PSivjCgU6SFaStjmvugDmKKmn
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [dropbuy.vn]
 match = 38.2%%
@@ -99,7 +99,7 @@ url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html?srsltid=AfmBOoonmlLhC4kVNeAG3HCTsNFBHiPvJP_RTQGC5WSyvjrtOMHJOb06
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
 
 [ru9.vn]
 match = 8.8%%
