--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-03 02:44:42
+lastsearch = 2024-08-03 08:10:14
 
 [shopee.vn]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = 8.7%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -47.8%%
+title = Chiếu Nhựa Hà Hằng - Tổng Kho Chiếu Nhựa Cao Cấp ...
+url = https://m.facebook.com/61552187007911/
 
 [tiki.vn]
 match = -21.7%%
@@ -27,9 +27,9 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.lazada.vn]
-match = -21.7%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.8 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-18-m-x-2-m-i813838027.html
+match = -34.8%%
+title = Chiếu Nhựa HOMIES Thái Bình Gập Đôi Nhựa Nguyên Sinh
+url = https://www.lazada.vn/products/chieu-nhua-homies-thai-binh-gap-doi-nhua-nguyen-sinh-nhieu-kich-thuoc-i1786455501.html?srsltid=AfmBOopysif8EspMHuBymCF0atTCy8Y6czC-0mvR2OpDHVBzTXu2XNZJ
 
 [www.sendo.vn]
 match = -34.8%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOordB_SJkL3VWzZbSKac6Z-I9CnnHK68J4pDeBxfKnIdJySjPuvU
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOoqYa-FEzyccfq6c_GBSEVT-G7b6-7of1_mx0s2zYZ7ljcJZgs1y
 
 [baothaibinh.com.vn]
 match = 17.4%%
