--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-03 06:18:08
+lastsearch = 2024-08-03 08:11:53
 
 [www.galottery.com]
 match = -7.7%%
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -230.8%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -215.4%%
+title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=UBbUr4PkwO4
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
@@ -132,8 +132,8 @@ title = Visit the Atlanta Beltline | Places To Go in Atlanta, GA
 url = https://beltline.org/visit/
 
 [www.niaaa.nih.gov]
-match = -38.5%%
-title = Drinking Levels Defined
+match = -130.8%%
+title = Drinking Levels and Patterns Defined
 url = https://www.niaaa.nih.gov/alcohol-health/overview-alcohol-consumption/moderate-binge-drinking
 
 [www.fabtechexpo.com]
@@ -505,4 +505,9 @@ url = https://www.uscg.mil/contact/
 match = -138.5%%
 title = Georgia Northwestern Technical College
 url = https://www.gntc.edu/
+
+[ww2.arb.ca.gov]
+match = -169.2%%
+title = List of CARB-Certified Air Cleaning Devices
+url = https://ww2.arb.ca.gov/list-carb-certified-air-cleaning-devices
 
