--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-03 03:20:14
+lastsearch = 2024-08-03 08:07:09
 
 [demxanh.com]
 match = -84.2%%
@@ -257,9 +257,9 @@ title = Search
 url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler"
 
 [www.booking.com]
-match = 5.3%%
-title = Tìm khách sạn ở Canberra
-url = https://www.booking.com/city/au/canberra.vi.html
+match = -73.7%%
+title = Tam Ðảo - Hotels in Vietnam - Booking.com's
+url = https://www.booking.com/city/vn/tam-dao.html
 
 [spie.org]
 match = -121.1%%
@@ -292,8 +292,8 @@ title = Department of Public Health Child ... - County of Los Angeles
 url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 
 [www.renaissanceriversidesaigon.com]
-match = -168.4%%
-title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
+match = -26.3%%
+title = Khách sạn 5 sao đẳng cấp Quốc tế
 url = https://www.renaissanceriversidesaigon.com/
 
 [vetaffairs.sd.gov]
