--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-03 00:55:44
+lastsearch = 2024-08-03 07:57:52
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Bộ thảm ghế gỗ 1 dài 2 ngắn
 url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
