--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-03 06:50:24
+lastsearch = 2024-08-03 08:11:34
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -25.0%%
-title = Simple Xiangling Build
-url = https://www.tiktok.com/discover/simple-xiangling-build
+match = -143.8%%
+title = Gloss for life #beautytok #hudabeauty #lip ...
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [www.diepxuan.com]
 match = -162.5%%
