CI images update

--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-03 02:24:47
+lastsearch = 2024-08-03 09:47:57
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -22,9 +22,9 @@ title = Đệm Bông Ép Everon 1200x1900 Mua Cho Giường Đơn ...
 url = https://everonvn.com.vn/everon/1900/dem-bong-ep-everon-co-120x190
 
 [everonchinhhang.vn]
-match = -50.0%%
-title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
-url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
+match = 5.0%%
+title = Đệm bông ép Sóng Everon
+url = https://everonchinhhang.vn/products/dem-bong-ep-song-everon
 
 [suongtuyet.com]
 match = 15.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOorTo1i3yFnnd01vr_uSrUbYZ_MyT8ri5P_zQ-jE7wBjuimgdxhZ
 
 [demqueensweet.com]
 match = -65.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOopL-aUYjf2ChnLy2jbsQmq-Upl-YEm98gIAXa5-TAHvsyfojnK_
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOoq5KizU_ac9erCmgFVCoMqi9JpuYdJI9a0BuW0TJy440WJQwGK3
 
 [www.diepxuan.com]
 match = 0.0%%
