--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-03 01:49:43
+lastsearch = 2024-08-03 09:38:24
 
 [demxanh.com]
 match = -6.9%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOor7Ol5cvEct_LMWgixWezklGN0nQV9A_-nN4lS2Z-mPqWoCx8Jx
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOoqwq4hw3zNE1kp-QzIO9prYBfe8HDkYxvPErpP7gD-ZHMi1mbZC
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = -6.9%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -27,14 +27,14 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = -20.7%%
-title = bộ chăn ga pyeoda giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
+match = -27.6%%
+title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
+url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
 match = 34.5%%
 title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOorEMsg-LenF1ZJ33bGGODrqYkKqgN8iaaBtfm7s0ebM8jePUipt
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOoquLJOB87l5bLMD7-qPvLOUMbE6VtiEOg0memRqGH7Fzs_W1bVd
 
 [dem4mua.vn]
 match = 6.9%%
