--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-03 05:53:50
+lastsearch = 2024-08-03 09:48:37
 
 [www.instagram.com]
 match = -173.3%%
@@ -92,9 +92,9 @@ title =
 url = https://m.youtube.com/watch?v=4oOqe1u195o
 
 [boardofwatersupply.com]
-match = -113.3%%
-title = fmaoåŠ é€Ÿå™¨å®˜ç½'ç«™
-url = http://boardofwatersupply.com/app1dX2x/71813.shtml
+match = -233.3%%
+title = å›½å†…ä¸Šè‹±å›½ç½'ç«™åŠ é€Ÿè½¯ä»¶
+url = https://boardofwatersupply.com/app5HF6d/38684.shtml
 
 [scholars.cityu.edu.hk]
 match = -166.7%%
