--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-03 03:19:53
+lastsearch = 2024-08-03 09:47:13
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -66.7%%
-title = 🔴 Trực tiếp: TRUNG QUỐC - VIỆT NAM | Giải bóng đá U19 ...
-url = https://www.youtube.com/watch?v=3U6gbHFBMhs
+match = -108.3%%
+title = Anh lo ngại căng thẳng leo thang giữa Israel và Hezbollah ...
+url = https://www.youtube.com/watch?v=bREDycaDv3E
 
 [www.chotot.com]
 match = -54.2%%
@@ -300,4 +300,9 @@ url = https://www.kimlongdongthap.vn/
 match = -45.8%%
 title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+
+[stc.dongthap.gov.vn]
+match = 16.7%%
+title = SỞ TÀI CHÍNH TỈNH ĐỒNG THÁP
+url = https://stc.dongthap.gov.vn/
 
