--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-08-03 05:16:54
+lastsearch = 2024-08-03 09:53:10
 
 [nemgiakho.com]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-cao-su-lien-a-classic-new-160x200x10cm.html
 [www.liena.com.vn]
 match = -22.2%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOoqOHHJJywIXWdNKrFGMvl0Egu7mzBil8WfEDc-l830pM_rHw3Oc
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
 
 [fefurniture.com.vn]
 match = 7.4%%
@@ -37,9 +37,9 @@ title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
 url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
 
 [tiki.vn]
-match = -11.1%%
-title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Ladome Blue
-url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383513
+match = 0.0%%
+title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Classic
+url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383508
 
 [demcaosuliena.com]
 match = 52.0%%
