--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-03 04:21:26
+lastsearch = 2024-08-03 09:48:58
 
 [www.everonvn.vn]
 match = 34.5%%
@@ -17,9 +17,9 @@ title = Ruột gối truyền thống Everon 45x65 (Classic - Loại thấp)
 url = https://happynest.vn/shop/ERG4565T/ruot-goi-truyen-thong-everon-45x65-(classic---loai-thap).html
 
 [everonhanquoc.vn]
-match = -24.1%%
-title = Ruột Gối MicreLax Everon: Giải Pháp Hoàn Hảo Cho Giấc ...
-url = https://everonhanquoc.vn/everon/12711/ruot-goi-micrelax
+match = 17.2%%
+title = Bảng giá ruột gối mỏng Everon
+url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
 
 [everonchinhhang.vn]
 match = 48.1%%
@@ -59,7 +59,7 @@ url = https://everonletrongtan.com/ruot-goi-everon
 [www.lazada.vn]
 match = -3.4%%
 title = Ruột Gối Nằm Everon Thư Giãn Cổ Kích Thước 45x65 ...
-url = https://www.lazada.vn/products/ruot-goi-nam-everon-thu-gian-co-kich-thuoc-45x65-giam-moi-ho-tro-co-chinh-hang-by-icon-bedding-i2132799966.html
+url = https://www.lazada.vn/products/ruot-goi-nam-everon-thu-gian-co-kich-thuoc-45x65-giam-moi-ho-tro-co-chinh-hang-by-icon-bedding-i2132799966.html?srsltid=AfmBOorMgzMlz-Ryl7kXzcoZbypJZV8su_IgsovH4xxOd-DjFFkRPEdl
 
 [shopee.vn]
 match = -20.7%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoqPCYRzN2MY5op8vGNth5QzC9MWCI-yRMUCu0LDRijVwztA5JuC
 
 [everonvn.com.vn]
 match = -20.7%%
