--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-03 06:59:47
+lastsearch = 2024-08-03 09:41:08
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -160.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
